[package]
name = "web_dl_base"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.19"
base16 = "0.2.1"
log = "0.4.17"
mime2ext = "0.1.52"
mime_classifier = "0.0.1"
reqwest = { version = "0.11.15", default-features = false, features = [
  "rustls-tls",
] }
sha2 = "0.10.6"
web_dl_derive = { path = "../web-dl-derive" }
thiserror = "1.0.40"
ron = "0.8.0"
anyhow = "1.0.70"
hex = { version = "0.4.3", features = ["serde"] }
serde_bytes = "0.11.9"
