[package]
name = "zhihu-dl-cli"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = "2.7.0"
slog-term = "2.9.0"
termcolor = "1.2.0"
slog-stdlog = "4.1.1"
clap = { version = "4.2.1", features = ["derive"] }
serde_json = "1.0.94"
indicatif = { version = "0.17.3", features = ["improved_unicode"] }
slog-scope = "4.4.0"
rustyline = "11.0.0"
shlex = "1.1.0"
slog-envlogger = "2.2.0"
ron = "0.8.0"
anyhow = "1.0.70"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
web_dl_base = { path = "../web-dl-base" }
zhihu-dl = { path = "../zhihu-dl" }
