[package]
name = "zhihu-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16 = "0.2.1"
chrono = {version = "0.4.24", features = ["serde"]}
html5ever = "0.26.0"
indicatif = {version = "0.17.3", features = ["improved_unicode"]}
lazy_static = "1.4.0"
log = "0.4.17"
md-5 = "0.10.5"
reqwest = {version = "0.11.15", default-features = false, features = ["rustls-tls", "cookies", "json", "gzip"]}
reqwest_cookie_store = "0.5.0"
serde = {version = "1.0.158", features = ["derive"]}
serde_json = "1.0.94"
serde_yaml = "0.9.19"
tokio = {version = "1.26.0", features = ["macros", "time"]}
web_dl_base = { path = "../web-dl-base" }

[dev-dependencies]
hex-literal = "0.3.4"
env_logger = "0.10.0"
