[package]
name = "zhihu-dl"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16 = "0.2.1"
chrono = {version = "0.4.24", features = ["serde"]}
html5ever = "0.26.0"
indicatif = {version = "0.17.3", features = ["improved_unicode"]}
lazy_static = "1.4.0"
log = "0.4.17"
md-5 = "0.10.5"
reqwest = {version = "0.11.15", default-features = false, features = ["rustls-tls", "cookies", "json", "gzip"]}
reqwest_cookie_store = "0.5.0"
serde = {version = "1.0.158", features = ["derive"]}
serde_json = "1.0.94"
serde_yaml = "0.9.19"
tokio = {version = "1.26.0", features = ["macros", "time", "rt-multi-thread"]}
web_dl_base = { path = "../web-dl-base" }
thiserror = "1.0.40"
scraper = "0.15.0"
ego-tree = "0.6.2"
slog = "2.7.0"
slog-term = "2.9.0"
termcolor = "1.2.0"
slog-stdlog = "4.1.1"
clap = {version = "4.2.1", features = ["derive"]}
anyhow = "1.0.70"
slog-scope = "4.4.0"
rustyline = "11.0.0"
shlex = "1.1.0"
slog-envlogger = "2.2.0"
url = "2.3.1"
pandoc_ast = "0.8.4"
ron = "0.8.0"

[dev-dependencies]
hex-literal = "0.3.4"
env_logger = "0.10.0"
