[package]
name = "zhihu-dl"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16 = "0.2.1"
chrono = { version = "0.4.24", features = ["serde"] }
html5ever = "0.26.0"
indicatif = { version = "0.17.3", features = ["improved_unicode"] }
lazy_static = "1.4.0"
log = "0.4.17"
md-5 = "0.10.5"
reqwest = { version = "0.11.15", default-features = false, features = [
  "rustls-tls",
  "cookies",
  "json",
  "gzip",
] }
reqwest_cookie_store = "0.5.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.19"
tokio = { version = "1.26.0", features = ["macros", "time"] }
web_dl_base = { path = "../web-dl-base" }
thiserror = "1.0.40"
scraper = "0.15.0"
ego-tree = "0.6.2"
anyhow = "1.0.70"
url = "2.3.1"
pandoc_ast = "0.8.4"
ron = "0.8.0"
yansi = "0.5.1"
zhihu-dl-derive = { path = "../zhihu-dl-derive" }
async-recursion = "1.0.4"
hex = "0.4.3"

[dev-dependencies]
hex-literal = "0.3.4"
env_logger = "0.10.0"
