[package]
name = "http-recorder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
mime = "0.3.17"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.96"
tar = "0.4.38"
web_dl_util = { path = "../../web-dl-util" }
base16 = "0.2.1"
